# km

./: .gitignore  AGENTS.md  README.md  build.py
.claude/: settings.local.json
.claude/skills/managine-feature-plans/: SKILL.md  archive_plan.py  plan-template.md
.claude/skills/nushell-config-sync/: sync.py
.claude/skills/nushell-install-utils/: install.py
coding/: README.md
coding/claude-code/: CLAUDE.md  README.md
coding/editor/: README.md
km-tools/: CHANGELOG.md  Cargo.toml  LLM_PROVIDER_DESIGN.md  README.md  mcp_acp_read_tool_spec.md  test_interactive.txt
km-tools/doc/: AUTO_COMPACT_PLAN.md  LLM_IMPLEMENTATION_STATUS.md  LOOP_DETECTION_DESIGN.md  README.md  REGISTRY_INTEGRATION_DESIGN.md
km-tools/doc/feature-desctipion/: EDITOR_EDIT_TOOL.md  LLM_PROVIDER.md
km-tools/doc/function-desctipion/: CHAT_LOOP_WITH_TOOLS_DESCRIPTION.md
km-tools/doc/plan/: LLM_IMPLEMENTATION_STATUS.md  REPO_SPLIT_PLAN.md
km-tools/doc/plan/archieve/: REGISTRY_INTEGRATION_DESIGN.md
km-tools/examples/: README.md  interactive_agent.rs  loop_detection_demo.rs  openai_basic.rs  openai_compact.rs  openai_tools.rs  simple_agent.rs
km-tools/src/: explore_hierarchy.rs  lib.rs  logger.rs  main.rs
km-tools/src/llm/: README.md  anthropic.rs  gemini.rs  helpers.rs  loop_detector.rs  mod.rs  openai.rs  provider.rs  registry.rs  tests.rs
km-tools/src/tools/: SCRATCHPAD_DESIGN.md  bash.rs  editor_edit.rs  mod.rs
os-config/: README.md
os-config/nushell/: README.md  config.nu  note.md  setup.md
personal-info/: README.md
programming-language/: README.md
study/AI/: note.md
(+4 files in other folders)
