[package]
name = "km-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and utilities
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# LLM support
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1.0"
futures = "0.3"
pin-project = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# SSE streaming support
eventsource-stream = "0.2"
bytes = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
simplelog = "0.12"

[features]
default = ["openai", "anthropic", "gemini"]
openai = []
anthropic = []
gemini = []
